smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply/apply-multiple-lines.smithy
// Parse error at line 6, column 10 near `\n@`: Expected one or more spaces | Model
$version: "2.0"

namespace smithy.example

apply Foo
@sensitive
